<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/list_item_hd_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listHead_txt"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/listitem_dbid"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="@string/list_item_listid_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listid_lbl"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/listHead_txt"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listid_val"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/listid_lbl"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/listid_lbl" />

    <TextView
        android:text="@string/list_item_listname_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listname_lbl"
        app:layout_constraintTop_toBottomOf="@+id/listHead_txt"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/listid_val"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listname_val"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/listname_lbl"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/listname_lbl" />

    <TextView
        android:text="@string/list_item_item_list_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_lbl"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_item_lbl" />

    <TextView
        android:text="@string/item_desc_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_desc_lbl"
        app:layout_constraintRight_toRightOf="@+id/item_desc_val"
        app:layout_constraintLeft_toLeftOf="@+id/item_desc_val"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/listname_lbl" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/item_desc_val"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/item_desc_lbl"
        android:hint="@string/item_desc_hint"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/item_edit_itemno"
        android:layout_marginLeft="8dp" />

    <CheckBox
        android:text="@string/confirm_chkbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_Chkbx"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/notif_type_spinner" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/notif_type_spinner"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/item_desc_val"
        android:entries="@array/notif_type" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/dist_list"
        app:layout_constraintTop_toBottomOf="@+id/notif_type_spinner"
        android:hint="@string/dist_list_lbl"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/dist_list_lbl"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="@string/dist_list_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dist_list_lbl"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dist_list" />

    <Button
        android:text="@string/edit_item_saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveBtn"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dist_list" />

    <TextView
        android:text="@string/item_edit_itemno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_no_lbl"
        app:layout_constraintLeft_toLeftOf="@+id/item_edit_itemno"
        app:layout_constraintRight_toLeftOf="@+id/item_desc_val"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/listid_lbl" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/item_edit_itemno"
        android:hint="@string/item_edit_itemno"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_desc_val"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/listitem_dbid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

</android.support.constraint.ConstraintLayout>